tests/misc/k8s/custom-api.yml
apiVersion: v1
kind: Namespace
metadata:
  name: misc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-api
  namespace: misc
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: custom-api
  template:
    metadata:
      labels:
        app: custom-api
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: custom-api
          image: localhost:5000/custom-api:tests
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: svc-custom-api
  namespace: misc
spec:
  type: ClusterIP
  selector:
    app: custom-api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-custom-api-nodeport
  namespace: misc
spec:
  type: NodePort
  selector:
    app: custom-api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
