tests/misc/k8s/oracle.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bunkerweb-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bunkerweb-db
  namespace: bunkerweb-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bunkerweb-db
  template:
    metadata:
      labels:
        app: bunkerweb-db
      annotations:
        bunkerweb.io/DB: "yes"
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: bunkerweb-db
          image: gvenzl/oracle-free:23-slim-faststart@sha256:d8913e4e4769b6e60197949bef30a4391713afe662b4b4e71a2665c881bdac8b
          imagePullPolicy: Always
          env:
            - name: ORACLE_RANDOM_PASSWORD
              value: "yes"
            - name: APP_USER
              value: "bunkerweb"
            - name: APP_USER_PASSWORD
              value: "secret"
          volumeMounts:
            - mountPath: "/opt/oracle/oradata"
              name: vol-db
      volumes:
        - name: vol-db
          persistentVolumeClaim:
            claimName: pvc-bunkerweb-db
---
apiVersion: v1
kind: Service
metadata:
  name: svc-bunkerweb-db
  namespace: bunkerweb-db
spec:
  type: ClusterIP
  selector:
    app: bunkerweb-db
  ports:
    - name: sql
      protocol: TCP
      port: 1521
      targetPort: 1521
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-bunkerweb-db
  namespace: bunkerweb-db
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: svc-bunkerweb-db-nodeport
  namespace: bunkerweb-db
spec:
  type: NodePort
  selector:
    app: bunkerweb-db
  ports:
    - name: sql
      protocol: TCP
      port: 1521
      targetPort: 1521
      nodePort: 30306
