tests/misc/k8s/redis-master.yml
apiVersion: v1
kind: Namespace
metadata:
  name: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
  namespace: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis-master
  template:
    metadata:
      labels:
        app: redis-master
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: redis-master
          image: redis:8-alpine@sha256:09160599abd229764c0fb44cb6be640294e1d360a54b19985ab4843dcf2d90f1
          imagePullPolicy: Always
          command: ["/scripts/redis-entrypoint.sh"]
          envFrom:
            - secretRef:
                name: redis-master-secret
          volumeMounts:
            - mountPath: /acl/
              name: vol-acl
            - mountPath: /tls/
              name: vol-tls
            - mountPath: /scripts/
              name: vol-scripts
              readOnly: true
            - mountPath: /data
              name: vol-data
      volumes:
        - name: vol-acl
          hostPath:
            path: /mnt/redis-acl/
        - name: vol-tls
          hostPath:
            path: /mnt/redis-tls/
        - name: vol-scripts
          hostPath:
            path: /mnt/redis-scripts/
        - name: vol-data
          persistentVolumeClaim:
            claimName: pvc-redis
---
apiVersion: v1
kind: Service
metadata:
  name: svc-redis-master
  namespace: redis
spec:
  type: ClusterIP
  selector:
    app: redis-master
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-redis
  namespace: redis
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: svc-redis-master-nodeport
  namespace: redis
spec:
  type: NodePort
  selector:
    app: redis-master
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 30379
